--- a/src/components/json-ld/article.astro
+++ b/src/components/json-ld/article.astro
@@ -11,7 +11,7 @@ interface Props {
 const {
   title,
   description = slateConfig.description,
-  image = '/og_image.png',
+  image = '',
   pubDate,
   lastModified,
   author = 'slate',
