--- a/src/components/layouts/PageLayout.astro
+++ b/src/components/layouts/PageLayout.astro
@@ -16,7 +16,7 @@ interface Props {
 const {
   title = '',
   description = slateConfig.description,
-  image = '/og_image.png',
+  image = '',
 } = Astro.props;
 const fullTitle = getFullTitle(title);
 
